syntax = "proto3";

package ChitChatty;

option go_package = "grpc/proto";

message clientSendMessage {
  string msg = 1;
  string time = 2;
}

message serverBroadcastMessage {
  string msg = 1;
  string time = 2;
}

service RecieveMessage {
  rpc RecieveAndBroadcastMessage(clientSendMessage) returns (serverBroadcastMessage);
}